<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="2"
        android:title="@string/search"
        app:showAsAction="always" />


    <item
        android:id="@+id/menu_sort_by_date"
        android:orderInCategory="3"
        android:title="@string/sort_by_date"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_sort_by_name"
        android:orderInCategory="4"
        android:title="@string/sort_by_name"
        app:showAsAction="never" />


    <item
        android:id="@+id/menu_sort_by_priority"
        android:orderInCategory="5"
        android:title="@string/sort_by_priority"
        app:showAsAction="never" />


</menu>